@@ -468,8 +468,11 @@ void __glcSaveGLState(__GLCglState* inGLState, __GLCcontext* inContext,
 		    &inGLState->bufferObjectID);
   }
 
-  if (inContext->enableState.glObjects && GLEW_ARB_vertex_buffer_object)
+  if (inContext->enableState.glObjects && GLEW_ARB_vertex_buffer_object) {
     glGetIntegerv(GL_ARRAY_BUFFER_BINDING_ARB, &inGLState->bufferObjectID);
+    glGetIntegerv(GL_ELEMENT_ARRAY_BUFFER_BINDING_ARB,
+		  &inGLState->elementBufferObjectID);
+  }
 
   if (inAll || inContext->renderState.renderStyle == GLC_LINE
       || inContext->renderState.renderStyle == GLC_TRIANGLE
@@ -513,8 +516,11 @@ void __glcRestoreGLState(__GLCglState* inGLState, __GLCcontext* inContext,
       glBindBufferARB(GL_PIXEL_UNPACK_BUFFER_ARB, inGLState->bufferObjectID);
   }
 
-  if (inContext->enableState.glObjects && GLEW_ARB_vertex_buffer_object)
+  if (inContext->enableState.glObjects && GLEW_ARB_vertex_buffer_object) {
     glBindBufferARB(GL_ARRAY_BUFFER_ARB, inGLState->bufferObjectID);
+    glBindBufferARB(GL_ELEMENT_ARRAY_BUFFER_ARB,
+		    inGLState->elementBufferObjectID);
+  }
 
   if (inAll || inContext->renderState.renderStyle == GLC_LINE
       || inContext->renderState.renderStyle == GLC_TRIANGLE
