@@ -29,6 +29,7 @@
 
 typedef struct __GLCglyphRec __GLCglyph;
 typedef struct __GLCatlasElementRec __GLCatlasElement;
+typedef struct __GLCgeomBatchRec __GLCgeomBatch;
 
 struct __GLCglyphRec {
   FT_ListNodeRec node;
@@ -41,6 +42,8 @@ struct __GLCglyphRec {
   GLuint glObject[4];
   GLint nContour;
   GLint* contours;
+  GLint nGeomBatch;
+  __GLCgeomBatch* geomBatches;
   /* Measurement infos */
   GLfloat boundingBox[4];
   GLfloat advance[2];
